Alteração de variáveis de static para private e listener do botão funcionando

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/nelsonjr/.netbeans/8.0.2/build.properties
+user.properties.file=/home/yudi/.netbeans/8.0.2/build.properties
