Player implementado; início do hibernate

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -27,9 +27,43 @@ dist.dir=dist
 dist.jar=${dist.dir}/Sudoku.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.antlr-2.7.7.jar=library/antlr-2.7.7.jar
+file.reference.dom4j-1.6.1.jar=library/dom4j-1.6.1.jar
+file.reference.geronimo-jta_1.1_spec-1.1.1.jar=library/geronimo-jta_1.1_spec-1.1.1.jar
+file.reference.hibernate-commons-annotations-5.0.0.Final.jar=library/hibernate-commons-annotations-5.0.0.Final.jar
+file.reference.hibernate-core-5.0.2.Final.jar=library/hibernate-core-5.0.2.Final.jar
+file.reference.hibernate-entitymanager-5.0.2.Final.jar=library/hibernate-entitymanager-5.0.2.Final.jar
+file.reference.hibernate-envers-5.0.2.Final.jar=library/hibernate-envers-5.0.2.Final.jar
+file.reference.hibernate-java8-5.0.2.Final.jar=library/hibernate-java8-5.0.2.Final.jar
+file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=library/hibernate-jpa-2.1-api-1.0.0.Final.jar
+file.reference.hibernate-jpamodelgen-5.0.2.Final.jar=library/hibernate-jpamodelgen-5.0.2.Final.jar
+file.reference.hibernate-osgi-5.0.2.Final.jar=library/hibernate-osgi-5.0.2.Final.jar
+file.reference.jandex-1.2.2.Final.jar=library/jandex-1.2.2.Final.jar
+file.reference.javassist-3.18.1-GA.jar=library/javassist-3.18.1-GA.jar
+file.reference.jboss-logging-3.3.0.Final.jar=library/jboss-logging-3.3.0.Final.jar
+file.reference.mysql-connector-java-5.1.37-bin.jar=library/mysql-connector-java-5.1.37-bin.jar
+file.reference.org.osgi.compendium-4.3.1.jar=library/org.osgi.compendium-4.3.1.jar
+file.reference.org.osgi.core-4.3.1.jar=library/org.osgi.core-4.3.1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-5.1.37-bin.jar}:\
+    ${file.reference.antlr-2.7.7.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.geronimo-jta_1.1_spec-1.1.1.jar}:\
+    ${file.reference.hibernate-commons-annotations-5.0.0.Final.jar}:\
+    ${file.reference.hibernate-core-5.0.2.Final.jar}:\
+    ${file.reference.hibernate-entitymanager-5.0.2.Final.jar}:\
+    ${file.reference.hibernate-envers-5.0.2.Final.jar}:\
+    ${file.reference.hibernate-java8-5.0.2.Final.jar}:\
+    ${file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar}:\
+    ${file.reference.hibernate-jpamodelgen-5.0.2.Final.jar}:\
+    ${file.reference.hibernate-osgi-5.0.2.Final.jar}:\
+    ${file.reference.jandex-1.2.2.Final.jar}:\
+    ${file.reference.javassist-3.18.1-GA.jar}:\
+    ${file.reference.jboss-logging-3.3.0.Final.jar}:\
+    ${file.reference.org.osgi.compendium-4.3.1.jar}:\
+    ${file.reference.org.osgi.core-4.3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
